# fastapi-xml-parser

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: celery.sh
grafana/: config.monitoring
grafana/provisioning/dashboards/: fastapi-dashboard.json
grafana/provisioning/datasources/: datasource.yml
migrations/: env.py
migrations/versions/: 9b108048d6a2_db_create.py
prometheus/: prometheus.yml
src/: __main__.py  config.py  main.py  metadata.py
src/api/parser_data/v1/routers/: __init__.py  parse_router.py  prompt_router.py
src/api/parser_data/v1/service/: parse_service.py  prompt_service.py
src/models/: __init__.py  prompt_model.py  sales_model.py
src/models/mixins/: custom_types.py
src/repositories/: __init__.py  prompt_repository.py  sales_repository.py
src/schemas/: prompt_schema.py  sales_schema.py
src/tasks/: celery_app.py  tasks.py
src/utils/: repository.py  service.py  unit_of_work.py
src/xml_files/: 2024-01-01.xml  2024-01-02.xml  2024-01-03.xml  2024-01-04.xml
tests/: conftest.py  utils.py
tests/fixtures/: test_cases.py
tests/fixtures/postgres/: __init__.py  sales.py
tests/unit/: conftest.py
tests/unit/api/v1/routers/: test_parse.py  test_prompt.py
